logs/rdfformats.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/RDFFormats'...
Compiling './lib/python3.5/site-packages/RDFFormats/FormatWriters.py'...
***   File "./lib/python3.5/site-packages/RDFFormats/FormatWriters.py", line 100
    raise NotImplementedError, "get_item_type_name"
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/RDFFormats/Store.py'...
***   File "./lib/python3.5/site-packages/RDFFormats/Store.py", line 29
    raise NotImplementedError, "has_item"
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/RDFFormats/Writers.py'...
***   File "./lib/python3.5/site-packages/RDFFormats/Writers.py", line 79
    raise ValueError, (element_name, attribute_name)
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/RDFFormats-0.1.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
